table on small screen fix + space removed on pre and code tags

--- a/public/style.css
+++ b/public/style.css
@@ -653,7 +653,7 @@ iframe {
 .new-table tr:hover {
   background-color: var(--table-hover-bg);
   color: var(--table-hover-text);
-  transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.4s ease-in-out;
 }
 
 .new-table td {
@@ -675,6 +675,8 @@ iframe {
 @media (max-width: 680px) {
   .table-wrapper {
     overflow-x: auto;
+    padding: 8px;
+    box-sizing: border-box;
   }
 
   .new-table {
